# team-version-control

./: README.md  bun.lockb  components.json  package.json  svelte.config.js  tsconfig.json
.github/workflows/: publish.yml
src/: bindings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  store.rs  upload.rs  version_control.rs
src/lib/: bindings.ts  errors.ts  utils.ts
src/lib/components/pokePaste/: uploadPokePasteButton.svelte
src/lib/components/ui/sheet/: index.ts
src/lib/components/ui/typography/: h2.svelte  h3.svelte  h4.svelte
src/routes/: +layout.svelte  +page.svelte  +page.ts  Footer.svelte  schema.ts  team.svelte
src/routes/(features)/: +layout.svelte
src/routes/(features)/create/: +page.svelte
src/routes/(features)/team/: +page.svelte  +page.ts  error.ts  errors.ts  infoComboBox.svelte  pokemonCard.svelte  schema.ts
src/routes/(features)/team/history/: +page.svelte  +page.ts  schema.ts
src/routes/create/: +page.svelte  +page.ts  schema.ts
src/routes/team/: +page.svelte  +page.ts  schema.ts
