[package]
name = "app"
version = "0.1.8"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "shell-open"] }
tauri-specta = { version = "1.0.2", features = ["typescript"] }
specta = "1.0.5"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace" }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
uuid = "1.8.0"
tauri-runtime-wry = "0.14.5"
chrono = "0.4.37"
reqwest = "0.12.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
